Moved project from main to ObjectManager

--- a/Minimal/Minimal.vcxproj
+++ b/Minimal/Minimal.vcxproj
@@ -153,6 +153,7 @@
     <None Include="shaders\skybox.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Definitions.h" />
     <ClInclude Include="Input.h" />
